# for_event_bus

./: AGENTS.md  Cargo.toml  README.md
for-event-bus/: Cargo.toml
for-event-bus-derive/: Cargo.toml
for-event-bus-derive/examples/: try_resolve.rs  try_resolve_worker.rs
for-event-bus-derive/src/: lib.rs
for-event-bus/examples/: interval_worker.rs  merge_event.rs  merge_event_with_derive.rs  merge_event_with_key.rs  normal.rs  single_event.rs
for-event-bus/src/: lib.rs
for-event-bus/src/bus/: mod.rs  sub_bus.rs
for-event-bus/src/worker/: mod.rs
for-event-bus/src/worker/identity/: interval.rs  merge.rs  merge_tick.rs  mod.rs  simple.rs
