[package]
name = "for-event-bus-derive"
version.workspace = true
edition = "2021"
description = "a derive crate for for-event-bus"
repository = "https://github.com/jm-observer/for_event_bus"

license-file = "../LICENSE"
readme = "../README.md"

include = [
    "Cargo.toml", "README.md", "src/lib.rs"
]

[lib]
proc-macro = true

[dependencies]
quote = "1"
proc-macro2 = "1.0"
syn = { version = "2.0", features = ["full", "extra-traits", "visit"]}


[dev-dependencies]
custom-utils.workspace = true
tokio = {version="1.49.0", features = ["full"]}

prettyplease.workspace = true