[package]
name = "for_event_bus"
version.workspace = true
edition = "2021"
description = "a event bus"
repository = "https://github.com/jm-observer/for_event_bus"

license-file = "../LICENSE"
readme = "../README.md"

include = [
    "../LICENSE", "Cargo.toml", "README.md", "src/**/*.rs"
]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio.workspace = true
log.workspace = true
for-event-bus-derive = { path = "../for-event-bus-derive", version = "0.2.0"}

[dev-dependencies]
custom-utils.workspace = true
tokio = {version="1.26.0", features = ["full"]}



